<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:onClick="decreaseIntegerAdult"
    android:orientation="vertical"
    android:textAlignment="gravity"
    tools:context=".MomaActivity">


    <TextView
        android:id="@+id/integer_number_senior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/zero"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/integer_number_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/zero"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="291dp"
        android:layout_marginEnd="16dp"
        android:onClick="increaseIntegerAdult"
        android:text="@string/adultPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/integer_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:text="@string/zero"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="124dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:text="@string/adult_tickets_moma"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="316dp"
        android:layout_height="149dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moma" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="317dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="191dp"
        android:text="@string/metrpolitan_museum_of_art"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="73dp"
        android:onClick="decreaseIntegerAdult"
        android:text="@string/adultMinus"
        app:layout_constraintEnd_toStartOf="@+id/integer_number"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="91dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:onClick="decreaseIntegerSenior"
        android:text="@string/adultMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="124dp"
        android:layout_height="36dp"
        android:layout_marginTop="141dp"
        android:text="@string/senior_tickets_18"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="85dp"
        android:layout_height="44dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="16dp"
        android:onClick="increaseIntegerSenior"
        android:text="@string/adultPlus"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="93dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        android:onClick="decreaseIntegerStudent"
        android:text="@string/adultMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="147dp"
        android:layout_height="34dp"
        android:layout_marginTop="15dp"
        android:text="@string/student_tickets_14"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/integer_number_senior" />

    <Button
        android:id="@+id/button6"
        android:layout_width="85dp"
        android:layout_height="46dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="47dp"
        android:onClick="increaseIntegerStudent"
        android:text="@string/adultPlus"
        app:layout_constraintStart_toEndOf="@+id/integer_number_student"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


</androidx.constraintlayout.widget.ConstraintLayout>